--- a/public/project/css/style-sound.css
+++ b/public/project/css/style-sound.css
@@ -1,169 +1,25 @@
-html {
-    height: 100%;
+.fr::before {
+    background-image: url(../../img/fr.png);
+    content: '';
+    display: inline-block;
+    width: 30px;
+    height: 20px;
+    vertical-align: middle;
+    margin-right: 10px;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    min-height: 100%;
-    flex-direction: column;
-    flex-wrap: nowrap;
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    box-sizing: border-box;
-    background-color: #080957;
-    box-shadow: 0px 5px 5px #7577cd;
-}
-
-.logo-area {
-    display: flex;
-    flex-direction: row;
-    box-sizing: border-box;
-    flex: 1;
-}
-
-.logo {
-    display: flex;
-    box-sizing: border-box;
-    text-decoration: none;
-    margin-left: 3%;
-    width: 225px;
-    height: auto;
-}
-
-.logo-large {
-    display: flex;
-    width: 100%;
-    height: auto;
-}
-
-.logo-mobile {
-    display: none;
-    width: 100%;
-    height: auto;
-}
-
-.nav {
-    display: flex;
-    flex-direction: row;
-    box-sizing: border-box;
-    flex: 1;
-}
-
-.blank {
-    display: flex;
-    box-sizing: border-box;
-    flex: 1;
-}
-
-.nav-list {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    box-sizing: border-box;
-    flex: 1.5;
-}
-
-.nav-hamburger {
-    display: none;
-    max-width: 60px;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0);
-    border: none;
-    cursor: pointer;
-}
-
-.nav-hamburger>img {
-    width: 100%;
-    height: auto;
-}
-
-.nav-mobile {
-    display: none;
-    flex-direction: column;
-    box-sizing: border-box;
-    transition: 0.3s;
-    max-height: 0px;
-    overflow: hidden;
-}
-
-.nav-mobile>* {
-    font-family: Century Gothic;
-    font-weight: bold;
-    width: 100%;
-    text-align: center;
+.en::before {
+    background-image: url(../../img/us.png);
+    content: '';
+    display: inline-block;
     align-self: center;
-    justify-content: center;
-    font-size: 20px;
-    padding: 3%;
-    color: white;
-}
-
-.nav-mobile>*:hover {
-    background-color: #7577cd;
-    transition: 0.3s;
-}
-
-.nav-list>* {
-    font-family: Century Gothic;
-    font-weight: bold;
-    flex-wrap: wrap;
-    align-items: center;
-    font-size: 20px;
-    padding: 3%;
-    color: white;
-}
-
-.nav-list>* {
-    font-family: Century Gothic;
-    font-weight: bold;
-    flex-wrap: wrap;
-    align-items: center;
-    font-size: 20px;
-    padding: 3%;
-    color: white;
-}
-
-.nav-list>*:hover {
-    background-color: #7577cd;
-    transition-duration: 0.3s;
-}
-
-.profil {
-    box-sizing: border-box;
-    text-decoration: none;
-}
-
-.project-page {
-    box-sizing: border-box;
-    text-decoration: none;
-}
-
-.contact {
-    box-sizing: border-box;
-    text-decoration: none;
-}
-
-.content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex: 1;
-    box-sizing: border-box;
-}
-
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-.sticky + .content {
-    padding-top: 50px;
+    width: 30px;
+    height: 16px;
+    margin-right: 10px;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .presentation {
@@ -259,115 +115,7 @@ body {
     font-size: 24px;
 }
 
-.footer {
-    display: flex;
-    justify-content: space-between;
-    box-sizing: border-box;
-    flex-direction: row;
-    background-color: #080957;
-    box-shadow: 0px -5px 5px #7577cd;
-    padding: 1%;
-    min-height: 120px;
-}
-
-.links {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    justify-content: center;
-    flex: 1;
-}
-
-.links>a {
-    display: flex;
-    padding: 1.5%;
-    margin: 1px;
-    font-size: 18px;
-    border-radius: 5px;
-    box-sizing: border-box;
-    text-decoration: none;
-    font-family: Century Gothic;
-    font-weight: bold;
-    color: white;
-    width: max-content;
-}
-
-.links>a:hover {
-    background-color: #7577cd;
-    transition-duration: 0.3s;
-}
-
-.adress-area {
-    display: flex;
-    box-sizing: border-box;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    flex: 1;
-}
-
-.adress {
-    display: flex;
-    box-sizing: border-box;
-    border-radius: 5px;
-    padding: 1%;
-    text-decoration: none;
-    font-family: Century Gothic;
-    font-weight: bold;
-    font-size: 24px;
-    color: white;
-}
-
-.adress:hover {
-    background-color: #7577cd;
-    transition-duration: 0.3s;
-}
-
-.help-area {
-    display: flex;
-    box-sizing: border-box;
-    justify-content: end;
-    flex: 1;
-}
-
-.help {
-    display: flex;
-    box-sizing: border-box;
-    padding: 1%;
-    width: 80px;
-    height: 80px;
-    align-self: center;
-}
-
-.help>img {
-    display: flex;
-    width: 100%;
-    height: auto;
-}
-
-@media only screen and (max-width: 1000px) {
-    .logo {
-        width: 250px;
-    }
-
-    .nav-list {
-        flex: 8;
-    }
-
-    .adress-area {
-        flex: 2;
-    }
-}
-
 @media only screen and (max-width: 800px) {
-    .blank {
-        flex: none;
-    }
-
-    .nav-list {
-        flex: 1;
-    }
-
     .presentation-title {
         font-size: 90px;
     }
@@ -390,46 +138,6 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
-    .header {
-        flex-direction: column;
-    }
-
-    .logo-large {
-        display: none;
-    }
-
-    .logo-mobile {
-        display: flex;
-    }
-
-    .nav-hamburger {
-        display: flex;
-    }
-
-    .nav-list {
-        display: none;
-    }
-
-    .nav-mobile {
-        display: flex;
-    }
-
-    .logo {
-        max-width: 80px;
-    }
-
-    .sticky + .content {
-        padding-top: 105px;
-    }
-
-    .logo-area {
-        justify-content: space-between;
-    }
-
-    .adress {
-        text-align: center;
-    }
-
     .presentation {
         padding: 10% 0;
     }
@@ -448,26 +156,5 @@ body {
 
     .description-left>.description-info {
         font-size: 16px;
-    }
-
-    .footer {
-        padding: 2% 1%;
-    }
-}
-
-@media only screen and (max-width: 400px) {
-    .help {
-        width: 60px;
-        height: 60px;
-    }
-
-    .adress {
-        font-size: 18px;
-    }
-
-    .links>a {
-        font-size: 16px;
-        padding: 4%;
-        margin: 5px;
     }
 }
