--- a/public/contact_error/style_contact_error.css
+++ b/public/contact_error/style_contact_error.css
@@ -1,3 +1,9 @@
+.content {
+    max-width: 800px;
+    width: 100%;
+    align-self: center;
+}
+
 .title {
     display: flex;
     justify-content: center;
