compressed css file

--- a/public/css/style-common.css
+++ b/public/css/style-common.css
@@ -1,455 +1,1 @@
-html {
-    height: 100%;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    min-height: 100%;
-    flex-direction: column;
-    flex-wrap: nowrap;
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    box-sizing: border-box;
-    background-color: #080957;
-    box-shadow: 0px 5px 5px #7577cd;
-    align-items: center;
-}
-
-.logo-area {
-    display: flex;
-    flex-direction: row;
-    box-sizing: border-box;
-    flex: 1;
-}
-
-.logo {
-    display: flex;
-    box-sizing: border-box;
-    text-decoration: none;
-    margin-left: 3%;
-    width: 225px;
-    height: 55px;
-}
-
-.logo-large {
-    display: flex;
-    width: 100%;
-    height: auto;
-}
-
-.logo-mobile {
-    display: none;
-    width: 100%;
-    height: auto;
-}
-
-.select-language {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    cursor: pointer;
-}
-
-.selected-language {
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.selected-language i {
-    margin-left: 5px;
-}
-
-.language-list {
-    position: absolute;
-    flex-direction: column;
-    top: 100%;
-    left: 0;
-    display: none;
-    width: 100%;
-    background-color: #080957;
-    border: 1px solid #7577cd;
-}
-
-.language {
-    text-align: center;
-    padding: 3%;
-    cursor: pointer;
-}
-
-.language:hover {
-    background-color: #7577cd;
-}
-
-.fr::before {
-    background-image: url(../img/fr.png);
-    content: '';
-    display: inline-block;
-    width: 30px;
-    height: 20px;
-    vertical-align: middle;
-    margin-right: 10px;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
-.en::before {
-    background-image: url(../img/us.png);
-    content: '';
-    display: inline-block;
-    align-self: center;
-    width: 30px;
-    height: 16px;
-    margin-right: 10px;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
-.nav {
-    display: flex;
-    flex-direction: row;
-    box-sizing: border-box;
-    flex: 1;
-}
-
-.nav-list {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    box-sizing: border-box;
-    flex: 3;
-}
-
-.nav-hamburger {
-    display: none;
-    max-width: 60px;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0);
-    border: none;
-    cursor: pointer;
-}
-
-.nav-hamburger>img {
-    width: 100%;
-    height: auto;
-}
-
-.nav-mobile {
-    display: none;
-    flex-direction: column;
-    box-sizing: border-box;
-    transition: 0.3s;
-    max-height: 0px;
-    overflow: hidden;
-}
-
-.nav-mobile>* {
-    font-family: Trebuchet MS;
-    font-weight: bold;
-    width: 100%;
-    text-align: center;
-    align-self: center;
-    justify-content: center;
-    font-size: 20px;
-    padding: 3%;
-    color: white;
-}
-
-.nav-mobile>*:hover {
-    background-color: #7577cd;
-    transition: 0.3s;
-}
-
-.nav-list>* {
-    font-family: Trebuchet MS;
-    font-weight: bold;
-    flex-wrap: wrap;
-    align-items: center;
-    font-size: 20px;
-    padding: 3%;
-    color: white;
-}
-
-.nav-list>*:hover {
-    background-color: #7577cd;
-    transition-duration: 0.3s;
-}
-
-.profil {
-    box-sizing: border-box;
-    text-decoration: none;
-}
-
-.project-page {
-    box-sizing: border-box;
-    text-decoration: none;
-}
-
-.contact {
-    box-sizing: border-box;
-    text-decoration: none;
-}
-
-.content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex: 1;
-    box-sizing: border-box;
-}
-
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-.sticky + .content {
-    padding-top: 50px;
-}
-
-.fill {
-    height: 20px;
-    flex: 1;
-}
-
-
-.footer {
-    display: flex;
-    justify-content: space-between;
-    box-sizing: border-box;
-    flex-direction: row;
-    background-color: #080957;
-    box-shadow: 0px -5px 5px #7577cd;
-    padding: 1%;
-    min-height: 120px;
-}
-
-.links {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    justify-content: center;
-    flex: 1;
-}
-
-.links>a {
-    display: flex;
-    padding: 1.5%;
-    margin: 1px;
-    font-size: 18px;
-    border-radius: 5px;
-    box-sizing: border-box;
-    text-decoration: none;
-    font-family: Trebuchet MS;
-    font-weight: bold;
-    color: white;
-    width: max-content;
-}
-
-.links>a:hover {
-    background-color: #7577cd;
-    transition-duration: 0.3s;
-}
-
-.adress-area {
-    display: flex;
-    box-sizing: border-box;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    flex: 1;
-}
-
-.adress {
-    display: flex;
-    box-sizing: border-box;
-    border-radius: 5px;
-    padding: 1%;
-    text-decoration: none;
-    font-family: Trebuchet MS;
-    font-weight: bold;
-    font-size: 24px;
-    color: white;
-}
-
-.adress:hover {
-    background-color: #7577cd;
-    transition-duration: 0.3s;
-}
-
-.help-area {
-    display: flex;
-    box-sizing: border-box;
-    justify-content: end;
-    flex: 1;
-}
-
-.help {
-    display: flex;
-    box-sizing: border-box;
-    padding: 1%;
-    width: 80px;
-    height: 80px;
-    align-self: center;
-}
-
-.help>img {
-    display: flex;
-    width: 100%;
-    height: auto;
-}
-
-.cookie-consent {
-    display: none;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    box-sizing: border-box;
-    align-items: center;
-    padding: 5px 10px;
-    background-color: rgba(117, 119, 205, 0.9);
-    z-index: 1;
-    position: sticky;
-    bottom: 0;
-}
-
-.cookie-consent-info {
-    display: flex;
-    font-family: Roboto, sans-serif;
-    color: black;
-    font-size: 20px;
-}
-
-.cookie-consent-check {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.cookie-consent-check>button {
-    box-sizing: border-box;
-    padding: 8px;
-    font-family: Roboto, sans-serif;
-    color: white;
-    font-size: 20px;
-    margin: 5px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-}
-
-.cookie-consent-accept {
-    background-color: #08832d;
-}
-
-.cookie-consent-accept:hover {
-    background-color: #17a843;
-}
-
-.cookie-consent-refuse {
-    background-color: #be1313;
-}
-
-.cookie-consent-refuse:hover {
-    background-color: #e42828;
-}
-
-@media only screen and (max-width: 1000px) {
-    .nav-list {
-        flex: 8;
-    }
-
-    .adress-area {
-        flex: 2;
-    }
-
-    .nav {
-        flex: 2;
-    }
-}
-
-@media only screen and (max-width: 800px) {
-    .nav-list {
-        flex: 1;
-    }
-
-    .cookie-consent {
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    .cookie-consent-info {
-        text-align: center;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    .header {
-        flex-direction: column;
-        align-items: unset;
-    }
-    
-    .logo-large {
-        display: none;
-    }
-
-    .logo-mobile {
-        display: flex;
-    }
-
-    .nav-hamburger {
-        display: flex;
-    }
-
-    .nav-list {
-        display: none;
-    }
-
-    .nav-mobile {
-        display: flex;
-    }
-
-    .logo {
-        max-width: 55px;
-    }
-
-    .logo-area {
-        justify-content: space-between;
-    }
-
-    .sticky + .content {
-        padding-top: 105px;
-    }
-
-    .adress {
-        text-align: center;
-    }
-
-    .footer {
-        padding: 2% 1%;
-    }
-}
-
-@media only screen and (max-width: 400px) {
-    .help {
-        width: 60px;
-        height: 60px;
-    }
-
-    .adress {
-        font-size: 18px;
-    }
-
-    .links>a {
-        font-size: 16px;
-        padding: 4%;
-        margin: 5px;
-    }
-}
+.header,.help>img,.logo,.logo-large,body{display:flex}.header,.language-list{background-color:#080957}.en::before,.fr::before{content:'';display:inline-block;width:30px;margin-right:10px;background-size:contain;background-repeat:no-repeat}.header,.logo,.logo-area,.nav,.nav-list,.nav-mobile{box-sizing:border-box}.language,.nav-mobile>*{text-align:center;padding:3%}.nav-mobile,.nav-mobile>:hover{transition:.3s}.nav-list>*,.nav-mobile>*{font-size:20px;padding:3%}.language:hover,.nav-mobile>:hover{background-color:#7577cd}.adress,.links>a,.logo{text-decoration:none}.adress,.links>a,.nav-list>*,.nav-mobile>*{font-family:Trebuchet MS;font-weight:700}.en::before,.help,.nav-mobile>*{align-self:center}html{height:100%}body{margin:0;padding:0;min-height:100%;flex-direction:column;flex-wrap:nowrap}.header{justify-content:space-between;box-shadow:0 5px 5px #7577cd;align-items:center}.logo-area,.nav{display:flex;flex-direction:row;flex:1}.logo{margin-left:3%;width:225px;height:55px}.help>img,.logo-large,.logo-mobile,.nav-hamburger>img{height:auto;width:100%}.logo-mobile{display:none}.select-language{display:flex;flex-direction:column;position:relative;cursor:pointer}.selected-language{border-radius:5px;display:flex;justify-content:center;align-items:center}.selected-language i{margin-left:5px}.language-list{position:absolute;flex-direction:column;top:100%;left:0;display:none;width:100%;border:1px solid #7577cd}.language{cursor:pointer}.fr::before{background-image:url(../img/fr.png);height:20px;vertical-align:middle}.en::before{background-image:url(../img/us.png);height:16px}.nav-list{display:flex;flex-direction:row;justify-content:space-around;flex:3}.nav-hamburger{display:none;max-width:60px;align-items:center;background-color:rgba(0,0,0,0);border:none;cursor:pointer}.adress,.cookie-consent-check>button,.links>a{color:#fff;border-radius:5px}.nav-mobile{display:none;flex-direction:column;max-height:0;overflow:hidden}.nav-mobile>*{width:100%;justify-content:center;color:#fff}.nav-list>*{flex-wrap:wrap;align-items:center;color:#fff}.adress,.footer,.help{display:flex;padding:1%;box-sizing:border-box}.adress:hover,.links>a:hover,.nav-list>:hover{background-color:#7577cd;transition-duration:.3s}.contact,.profil,.project-page{box-sizing:border-box;text-decoration:none}.content{display:flex;flex-direction:column;justify-content:center;flex:1;box-sizing:border-box}.sticky{position:fixed;top:0;width:100%}.sticky+.content{padding-top:50px}.fill{height:20px;flex:1}.footer{justify-content:space-between;flex-direction:row;background-color:#080957;box-shadow:0 -5px 5px #7577cd;min-height:120px}.links{display:flex;flex-direction:column;box-sizing:border-box;justify-content:center;flex:1}.links>a{display:flex;padding:1.5%;margin:1px;font-size:18px;box-sizing:border-box;width:max-content}.adress-area{display:flex;box-sizing:border-box;justify-content:center;flex-wrap:wrap;align-items:center;flex:1}.adress{font-size:24px}.help-area{display:flex;box-sizing:border-box;justify-content:end;flex:1}.help{width:80px;height:80px}.cookie-consent{display:none;flex-direction:row;justify-content:space-between;width:100%;box-sizing:border-box;align-items:center;padding:5px 10px;background-color:rgba(117,119,205,.9);z-index:1;position:sticky;bottom:0}.cookie-consent-info{display:flex;font-family:Roboto,sans-serif;color:#000;font-size:20px}.cookie-consent-check{display:flex;align-items:center;justify-content:center}.cookie-consent-check>button{box-sizing:border-box;padding:8px;font-family:Roboto,sans-serif;font-size:20px;margin:5px;border:none;cursor:pointer}.cookie-consent-accept{background-color:#08832d}.cookie-consent-accept:hover{background-color:#17a843}.cookie-consent-refuse{background-color:#be1313}.cookie-consent-refuse:hover{background-color:#e42828}@media only screen and (max-width:1000px){.nav-list{flex:8}.adress-area,.nav{flex:2}}@media only screen and (max-width:800px){.nav-list{flex:1}.cookie-consent{flex-direction:column;justify-content:space-between}.cookie-consent-info{text-align:center}}@media only screen and (max-width:600px){.header{flex-direction:column;align-items:unset}.logo-large,.nav-list{display:none}.logo-mobile,.nav-hamburger,.nav-mobile{display:flex}.logo{max-width:55px}.logo-area{justify-content:space-between}.sticky+.content{padding-top:105px}.adress{text-align:center}.footer{padding:2% 1%}}@media only screen and (max-width:400px){.help{width:60px;height:60px}.adress{font-size:18px}.links>a{font-size:16px;padding:4%;margin:5px}}
