--- a/public/css/style-index.css
+++ b/public/css/style-index.css
@@ -1,176 +1,1 @@
-.presentation {
-    display: flex;
-    flex-direction: row;
-    box-sizing: border-box;
-}
-
-.presentation-info {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    flex: 1;
-    justify-content: center;
-}
-
-.presentation-info>p {
-    font-family: Roboto, sans-serif;
-    font-size: 28px;
-    display: flex;
-    align-self: center;
-    text-align: center;
-    padding: 0 2%;
-}
-
-.presentation-picture {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    flex: 1;
-    justify-content: center;
-    align-items: center;
-}
-
-.presentation-picture>img {
-    display: flex;
-    height: auto;
-    width: 100%;
-    max-width: 500px;
-    box-sizing: border-box;
-    background-image: url(../img/fond-img.png);
-    background-size: 500px auto;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.projects-area {
-    display: flex;
-    flex-direction: column;
-    background-color: #080957;
-    padding-bottom: 1%;
-    margin-bottom: 20px;
-}
-
-.projects-title {
-    text-align: center;
-    box-sizing: border-box;
-    width: fit-content;
-    align-self: center;
-    padding: 0.5%;
-    color: white;
-    font-family: Source Sans Pro, sans-serif ;
-    font-size: 40px;
-}
-
-.projects-view {
-    display: flex;
-    flex-direction: row;
-    box-sizing: border-box;
-    justify-content: center;
-    padding: 0 5%;
-    flex: 1;
-}
-
-.project {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    flex: 1;
-    margin: 0 0.5%;
-    border: #7577cd solid 3px;
-    background-color: #3033AD;
-    border-radius: 3px;
-    text-decoration: none;
-}
-
-.project:hover {
-    box-shadow: 0 0 10px 5px #7577cd;
-    transition-duration: 0.3;
-}
-
-.alter {
-    background-image: url("../img/view-modern-office.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-.sound {
-    background-image: url("../img/recording.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-.website {
-    background-image: url("../img/dev-desk.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-.content-project {
-    display: flex;
-    flex: 1;
-    background-color: rgba(41, 41, 78, 0.8);
-}
-
-.content-project>h1 {
-    display: flex;
-    box-sizing: border-box;
-    color: white;
-    font-size: 24px;
-    font-family: Roboto, sans-serif;
-    font-weight: 600;
-    margin: 1%;
-    flex: 1;
-    min-height: 250px;
-    text-align: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.project>p {
-    display: flex;
-    box-sizing: border-box;
-    color: white;
-    font-size: 20px;
-    font-family: Roboto, sans-serif;
-    padding: 2%;
-    text-decoration: none;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.project:hover .content-project {
-    background-color: rgba(47, 46, 55, 0.4);
-    transition-duration: 0.3s;
-}
-
-@media only screen and (max-width: 800px) {
-    .presentation {
-        flex-direction: column;
-    }
-
-    .presentation-info>p {
-        font-size: 22px;
-    }
-
-    .projects-title {
-        font-size: 32px;
-    }
-
-    .projects-view {
-        flex-direction: column;
-    }
-        
-    .project {
-        margin: 1% 0;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    .content-project>h1 {
-        font-size: 18px;
-    }
-
-    .content-project>p {
-        font-size: 18px;
-    }
-}
+.alter,.sound,.website{background-size:cover;background-position:center}.alter,.presentation-picture>img,.sound,.website{background-position:center}.content-project>h1,.presentation-info>p,.project>p{font-family:Roboto,sans-serif}.project,.project>p{text-decoration:none}.presentation{display:flex;flex-direction:row;box-sizing:border-box}.presentation-info,.presentation-picture{flex-direction:column;display:flex;box-sizing:border-box}.presentation-info{flex:1;justify-content:center}.presentation-info>p{font-size:28px;display:flex;align-self:center;text-align:center;padding:0 2%}.presentation-picture{flex:1;justify-content:center;align-items:center}.presentation-picture>img{display:flex;height:auto;width:100%;max-width:500px;box-sizing:border-box;background-image:url(../img/fond-img.png);background-size:500px auto;background-repeat:no-repeat}.projects-area{display:flex;flex-direction:column;background-color:#080957;padding-bottom:1%;margin-bottom:20px}.projects-title{text-align:center;box-sizing:border-box;width:fit-content;align-self:center;padding:.5%;color:#fff;font-family:Source Sans Pro,sans-serif;font-size:40px}.projects-view{display:flex;flex-direction:row;box-sizing:border-box;justify-content:center;padding:0 5%;flex:1}.project{display:flex;flex-direction:column;box-sizing:border-box;flex:1;margin:0 .5%;border:3px solid #7577cd;background-color:#3033ad;border-radius:3px}.project:hover{box-shadow:0 0 10px 5px #7577cd;transition-duration:.3}.alter{background-image:url("../img/view-modern-office.jpg")}.sound{background-image:url("../img/recording.jpg")}.website{background-image:url("../img/dev-desk.jpg")}.content-project{display:flex;flex:1;background-color:rgba(41,41,78,.8)}.content-project>h1{display:flex;box-sizing:border-box;color:#fff;font-size:24px;font-weight:600;margin:1%;flex:1;min-height:250px;text-align:center;justify-content:center;flex-direction:column}.project>p{display:flex;box-sizing:border-box;color:#fff;font-size:20px;padding:2%;justify-content:center;flex-direction:column}.project:hover .content-project{background-color:rgba(47,46,55,.4);transition-duration:.3s}@media only screen and (max-width:800px){.presentation,.projects-view{flex-direction:column}.presentation-info>p{font-size:22px}.projects-title{font-size:32px}.project{margin:1% 0}}@media only screen and (max-width:600px){.content-project>h1,.content-project>p{font-size:18px}}
