--- a/public/css/style-informations.css
+++ b/public/css/style-informations.css
@@ -1,15 +1,1 @@
-.terms-of-use {
-    display: flex;
-    max-width: 1000px;
-    flex-direction: column;
-    align-self: center;
-    padding: 1%;
-}
-
-.terms-of-use>* {
-    font-family: Roboto, sans-serif;
-}
-
-.contact-link {
-    color: black;
-}
+.terms-of-use{display:flex;max-width:1000px;flex-direction:column;align-self:center;padding:1%}.terms-of-use>*{font-family:Roboto,sans-serif}.contact-link{color:#000}
